updates to validate - OAuth
