# swagger.json
@@ -5,7 +5,10 @@
     "description": "Swagger Rental Cars API",
     "version": "1.0.0"
   },
-  "host": "cse341-swaggerrentalcars.onrender.com",
+  "host": [
+    "localhost:8080",
+    "cse341-swaggerrentalcars.onrender.com"
+  ],
   "basePath": "/",
   "schemes": [
     "http",
@@ -14,10 +17,40 @@
   "paths": {
     "/": {
       "get": {
-        "description": "Loads Home view",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -66,6 +99,12 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -96,23 +135,56 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Update a car in the database, every field is required. Any field that is ommitted will be set to \"NULL\"",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "carMake": {
+                  "example": "any"
+                },
+                "carModel": {
+                  "example": "any"
+                },
+                "carYear": {
+                  "example": "any"
+                },
+                "carTag": {
+                  "example": "any"
+                },
+                "carStatus": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "description": "",
+        "description": "Delete a car in the database.;",
         "parameters": [
           {
             "name": "id",
@@ -122,8 +194,8 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -189,10 +261,45 @@
         }
       },
       "post": {
-        "description": "Create a employee in the database, every field is required. The empolyee ID number is automatically assigned by the database after submition.\r  Any field that is ommitted will be set to \"NULL\"",
+        "description": "Create an employee in the database, every field is required. The employee ID number is automatically assigned by the database after submition.\r  Any field that is ommitted will be set to \"NULL\"",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "empFName": {
+                  "example": "any"
+                },
+                "empLName": {
+                  "example": "any"
+                },
+                "empEmail": {
+                  "example": "any"
+                },
+                "empPhone": {
+                  "example": "any"
+                },
+                "empAddress": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -221,23 +328,56 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Update an employee in the database, every field is required. Any field that is ommitted will be set to \"NULL\"",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "empFName": {
+                  "example": "any"
+                },
+                "empLName": {
+                  "example": "any"
+                },
+                "empEmail": {
+                  "example": "any"
+                },
+                "empPhone": {
+                  "example": "any"
+                },
+                "empAddress": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "description": "",
+        "description": "Delete an employee in the database;",
         "parameters": [
           {
             "name": "id",
@@ -247,28 +387,28 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/employees/login": {
       "post": {
-        "description": "",
+        "description": "Employee Login to database, every field is required. Any field that is ommitted will be set to \"NULL\"",
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/employees/logout": {
       "post": {
-        "description": "",
+        "description": "Employee logout from database, every field is required. Any field that is ommitted will be set to \"NULL\"",
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -286,10 +426,45 @@
         }
       },
       "post": {
-        "description": "",
+        "description": "Create a renter in the database, every field is required. The renter ID number is automatically assigned by the database after submition.\r  Any field that is ommitted will be set to \"NULL\"",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "renterFName": {
+                  "example": "any"
+                },
+                "renterLName": {
+                  "example": "any"
+                },
+                "renterEmail": {
+                  "example": "any"
+                },
+                "renterDate": {
+                  "example": "any"
+                },
+                "renterDateOfReturn": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -318,23 +493,56 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Update a renter in the database, every field is required. Any field that is ommitted will be set to \"NULL\"",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "renterFName": {
+                  "example": "any"
+                },
+                "renterLName": {
+                  "example": "any"
+                },
+                "renterEmail": {
+                  "example": "any"
+                },
+                "renterDate": {
+                  "example": "any"
+                },
+                "renterDateOfReturn": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "description": "",
+        "description": "Delete a renter from the database.;",
         "parameters": [
           {
             "name": "id",
@@ -344,8 +552,8 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -363,10 +571,51 @@
         }
       },
       "post": {
-        "description": "",
+        "description": "Create a store in the database, every field is required. The store ID number is automatically assigned by the database after submition.\r  Any field that is ommitted will be set to \"NULL\"",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "storeName": {
+                  "example": "any"
+                },
+                "storeManager": {
+                  "example": "any"
+                },
+                "storeState": {
+                  "example": "any"
+                },
+                "storePhone": {
+                  "example": "any"
+                },
+                "storeEmail": {
+                  "example": "any"
+                },
+                "storeCapacity": {
+                  "example": "any"
+                },
+                "storeBrandType": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -395,23 +644,62 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Update a store in the database, every field is required. Any field that is ommitted will be set to \"NULL\"",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "storeName": {
+                  "example": "any"
+                },
+                "storeManager": {
+                  "example": "any"
+                },
+                "storeState": {
+                  "example": "any"
+                },
+                "storePhone": {
+                  "example": "any"
+                },
+                "storeEmail": {
+                  "example": "any"
+                },
+                "storeCapacity": {
+                  "example": "any"
+                },
+                "storeBrandType": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "description": "",
+        "description": "Delete a store from the database, every field is required.;",
         "parameters": [
           {
             "name": "id",
@@ -421,8 +709,8 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
